--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
+    "browser-sync": "^2.27.7",
+    "gulp": "^4.0.2",
+    "gulp-data": "^1.3.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-pugbem": "^2.2.4",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "^0.1.11"
   },
   "scripts": {
+    "start": "npx gulp",
+    "build": "npx gulp pug",
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint .",
     "test": "npm run editorconfig"
